--- a/manager/templates/app/home.html.twig
+++ b/manager/templates/app/home.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
-{% block title %}Home MF!{% endblock %}
-{% block stylesheets %}{% endblock %}
+
+{% block title %}Home{% endblock %}
 
 {% block body %}
-<h1>Hello from home</h1>
+    <h1>Hello!</h1>
 {% endblock %}
