--- a/manager/templates/base.html.twig
+++ b/manager/templates/base.html.twig
@@ -30,6 +30,7 @@
                 <div class="dropdown-header text-center">
                     <strong>Account</strong>
                 </div>
+                <a class="dropdown-item" href="{{ path('profile') }}"><i class="fa fa-user"></i> Profile</a>
                 <a class="dropdown-item" href="{{ path('app_logout') }}"><i class="fa fa-lock"></i> Logout</a>
             </div>
         </li>
@@ -42,6 +43,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('home') }}">
                         <i class="nav-icon icon-speedometer"></i> Dashboard
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('profile') }}">
+                        <i class="nav-icon icon-user"></i> Profile
                     </a>
                 </li>
             </ul>
