--- a/manager/assets/css/app.scss
+++ b/manager/assets/css/app.scss
@@ -15,6 +15,33 @@ main {
     }
 }
 
+.controls {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+
+    & > * {
+        margin-right: 4px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+}
+
+.box {
+    background: #fff;
+    box-shadow: 0 0 2px rgba(0,0,0,0.1);
+}
+
+.table {
+    th,
+    td {
+        vertical-align: middle;
+    }
+}
+
 .footer {
     background-color: #f5f5f5;
 
